# Project_EPOCH

./: .gitignore  .gitmodules  README.md  output.deck  paths.txt  pyproject.toml  sdf_xarray_examples.py  test_epydeck.py  test_epyscan.py  visualise_sdf_data.py
.venv_EPOCH/: pyvenv.cfg
data_analysis/: 0007.sdf  commit_info.h  deck.status  normal.visit  plot_sdf_2.py  sdfdiff  sdffilter
data_analysis/Data/: 0000.sdf  0001.sdf  0002.sdf  0003.sdf  0004.sdf  0005.sdf  0006.sdf  0007.sdf  0008.sdf  0009.sdf  0010.sdf  0011.sdf  0012.sdf  0013.sdf  0014.sdf  0015.sdf  0016.sdf  0017.sdf  0018.sdf  0019.sdf  0020.sdf  0021.sdf  0022.sdf  0023.sdf  0024.sdf  0025.sdf  0026.sdf  0027.sdf  0028.sdf  0029.sdf  0030.sdf  0031.sdf  0032.sdf  0033.sdf  (+167 more)
test/: git_test.txt
test_1d/: 0000.sdf  0001.sdf  0002.sdf  0003.sdf  0004.sdf  0005.sdf  0006.sdf  0007.sdf  0008.sdf  0009.sdf  0010.sdf  0011.sdf  0012.sdf  0013.sdf  0014.sdf  0015.sdf  0016.sdf  0017.sdf  0018.sdf  0019.sdf  0020.sdf  0021.sdf  0022.sdf  0023.sdf  0024.sdf  0025.sdf  0026.sdf  0027.sdf  0028.sdf  0029.sdf  0030.sdf  0031.sdf  0032.sdf  0033.sdf  0034.sdf  0035.sdf  0036.sdf  0037.sdf  0038.sdf  0039.sdf  (+162 more)
test_2d/: 0000.sdf  0001.sdf  0002.sdf  0003.sdf  0004.sdf  0005.sdf  0006.sdf  0007.sdf  0008.sdf  0009.sdf  0010.sdf  0011.sdf  0012.sdf  0013.sdf  0014.sdf  0015.sdf  0016.sdf  0017.sdf  0018.sdf  0019.sdf  0020.sdf  0021.sdf  0022.sdf  0023.sdf  0024.sdf  0025.sdf  0026.sdf  0027.sdf  0028.sdf  0029.sdf  0030.sdf  0031.sdf  0032.sdf  0033.sdf  0034.sdf  0035.sdf  0036.sdf  0037.sdf  0038.sdf  0039.sdf  (+62 more)
(+18 files in other folders)
